[package]
name = "deployment-changelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
clap = { version = "4.1.8", features = ["derive"] }
clap-verbosity-flag = "2.0.0"
clap_complete = "4.1.5"
env_logger = "0.10.0"
futures = "0.3.27"
git2 = "0.16.1"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
shadow-rs = "0.21.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
