[package]
name = "deployment-changelog"
version = "0.1.0"
authors = ["Chainso <chanzobryan@gmail.com>"]
edition = "2021"
description = "A Rust library for generating changelogs based on deployments or commit ranges in Git repositories. It integrates with Bitbucket, Jira, and Spinnaker to retrieve commit, pull request, and issue information for the specified range or Spinnaker environment. The crate provides a structured `Changelog` object with a human-readable display representation."
readme = "README.md"
repository = "https://github.com/Chainso/deployment-changelog"
license-file = "LICENSE.txt"
keywords = ["changelog", "release-notes", "bitbucket", "jira", "spinnaker"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.67"
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.1.11", features = ["derive", "env"] }
clap-verbosity-flag = "2.0.0"
clap_complete = "4.1.5"
env_logger = "0.10.0"
futures = "0.3.27"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_with = { version = "2.3.1", features = ["chrono"] }
shadow-rs = "0.21.0"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
graphql_client = { version = "0.12.0", features = ["reqwest"] }

